--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
     <main>
 
         <hr>
-
-    <img class="pan" src="./assets/img/pan.jpg" alt="">
+        
+        <div class="banner">
+            <div class="capa"></div>
+            <div class="info">
+                <h1>Bienvenidos a Panaderia El boulevard</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam amet sapiente exercitationem harum sint reprehenderit beatae ipsa natus quibusdam! Repudiandae.</p>
+                <a href="#">Leer mas</a>
+            </div>
+        </div>
+  
     
     <section class="contenedor">
         <div class="box">
