--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         </div>
             <nav class="navegador">
                 <a href="index.html" class="navEnlace">Inicio</a>
-                <a href="QuienesSomos.html"class="navEnlace">Quienes somos</a>
                 <a href="productos.html"class="navEnlace">Productos</a>
                 <a href="sucursal.html"class="navEnlace">Sucursal</a>
                 <a href="contacto.html"class="navEnlace">Contacto</a>
@@ -26,8 +25,15 @@
     <main>
 
         <hr>
-
-    <img class="pan" src="./assets/img/pan.jpg" alt="">
+  
+        <div class="banner">
+            <div class="capa"></div>
+            <div class="info">
+                <h1>Bienvenidos a Panaderia El boulevard</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam amet sapiente exercitationem harum sint reprehenderit beatae ipsa natus quibusdam! Repudiandae.</p>
+                <a href="#">Leer mas</a>
+            </div>
+        </div>
     
     <section class="contenedor">
         <div class="box">
