--- a/contacto.html
+++ b/contacto.html
@@ -5,22 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body class="grid-container">
-    <header>
-        <div class="logo">
-        <img src="./assets/img/logo.jpg" alt="">
-        <h2>Panaderia El boulevard</h2>
+<body class="container-fluid">
+    <header class="col-12">
+     <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 id="menu">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"> <span class="text-warning fs-5 fw-bold"> El boulevard</a></span>
+             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+            </button>
+                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="productos.html">Productos</a>
+                 </li>
+                 <li class="nav-item">
+                   <a class="nav-link" href="sucursal.html">Sucursal</a>
+                  </li>
+                 <li class="nav-item">
+                  <a class="nav-link" href="contacto.html">Contacto</a>
+                </li>
+                 </div>
         </div>
-            <nav class="navegador">
-                <a href="index.html" class="navEnlace">Inicio</a>
-                <a href="productos.html"class="navEnlace">Productos</a>
-                <a href="sucursal.html"class="navEnlace">Sucursal</a>
-                <a href="contacto.html"class="navEnlace">Contacto</a>
-            </nav>
-            
+    </nav>
     </header>
+    
     <div>
             <form class="Formulario">
                 <label for="text">Nombre</label>
