--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
         </section>
     </main>
-    <footer class="col-12">
+    <footer class="col-12 justify-content-center">
         Derechos reservados &copy; 2022 
         Diseñado por Joaquin 
         villarrealjoaquin09@gmail.com 
