--- a/productos.html
+++ b/productos.html
@@ -34,8 +34,80 @@
             </div>
           </nav>
     </header>
-    
-    <footer>
+    <main class="col-12">
+      <div class="titulo">
+      <h2>Nuestros Productos</h2>
+       </div>
+       <section class=" row col-12 cards d-flex justify-content-evenly">
+        <div class="card col-md-3" style="width: 18rem;">
+          <img src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Promos</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Ver mas</a>
+          </div>
+        </div>
+        <div class="card col-md-3" style="width: 18rem;">
+          <img src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Promos</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Ver mas</a>
+          </div>
+        </div>
+        <div class="card col-md-3" style="width: 18rem;">
+          <img src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Promos</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Ver mas</a>
+          </div>
+        </div>
+        <div class="card col-md-3" style="width: 18rem;">
+          <img src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Promos</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Ver mas</a>
+          </div>
+        </div>
+
+        <section class=" row col-12 cards d-flex justify-content-evenly">
+          <div class="card col-md-3" style="width: 18rem;">
+            <img src="./assets/img/facturas.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Promos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Ver mas</a>
+            </div>
+          </div>
+          <div class="card col-md-3" style="width: 18rem;">
+            <img src="./assets/img/facturas.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Promos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Ver mas</a>
+            </div>
+          </div>
+          <div class="card col-md-3" style="width: 18rem;">
+            <img src="./assets/img/facturas.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Promos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Ver mas</a>
+            </div>
+          </div>
+          <div class="card col-md-3" style="width: 18rem;">
+            <img src="./assets/img/facturas.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Promos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Ver mas</a>
+            </div>
+          </div>
+  
+    </main>
+    <footer class="col-12 d-flex justify-content-center">
         Derechos reservados &copy; 2022 
         Diseñado por Joaquin  
         villarrealjoaquin09@gmail.com 
