--- a/contacto.html
+++ b/contacto.html
@@ -32,29 +32,49 @@
                 </li>
                  </div>
         </div>
-    </nav>
-    </header>
-    
-    <div>
-            <form class="Formulario">
-                <label for="text">Nombre</label>
-                <input class="f" type="text" name="Nombre">
-                <label for="text">Apellido</label>
-                <input class="f" type="text" name="Apellido">
-
-                <label for="text">Correo electronico</label>
-                <input class="f" type="text" name="correo">
-                <label for="text">contraseña</label>
-                <input class="f" type="text" name="contraseña">
-
-                <input type="Submit" value="Enviar">
-                <input type="reset" value="Borrar">
+  </nav>
+  </header>
+    <section class="d-flex justify-content-center">
+      <div class="card col-sm-6 p-3">
+          <div class="mb-3">
+          <h4>Contacto</h4>
+          </div>
+          <div class="mb-2">
+            <form action="">
+              <div class="mb-2">
+              <label for="nombre">Nombre</label>
+              <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingrese su nombre">
+              </div>
+              <div class="mb-2">
+                <label for="apellido">apellido</label>
+                <input type="text" class="form-control" name="apellido" id="apellido" placeholder="Ingrese su apellido">
+                </div>
+                <div class="mb-2">
+                  <label for="correo">correo</label>
+                  <input type="text" class="form-control" name="correo" id="correo" placeholder="Ingrese su nombre">
+                  </div>
+                  <div class="mb-2">
+                    <label for="sexo">sexo</label>
+                    <input type="radio" name="sexo" id="masculino" value="masculino">
+                    <input type="radio" name="sexo" id="femenino" value="femenino">
+                    </div>
+                    <div class="mb-2">
+                      <label for="mensaje">mensaje</label>
+                      <textarea name="mensaje" id="mensaje" class="form-control"></textarea>
+                      </div>
+                      <div class="mb-2">
+                        <button class="btn btn-primary">Enviar </button>
+                      </div>
             </form>
-        </div>
-        <footer>
-            Derechos reservados &copy; 2022 
-            Diseñado por Joaquin 
-            villarrealjoaquin09@gmail.com 
+          </div>
+      </div>
+  </section>
+  <footer class="col-12 d-flex justify-content-center">
+    Derechos reservados &copy; 2022 
+    Diseñado por Joaquin  
+    villarrealjoaquin09@gmail.com 
+</footer>
+
     
 </body>
 </html>
