--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <img src="./assets/img/ofertas.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Promos</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illo fugit officia, eveniet eaque corporis?.</p>
               <a href="#" class="btn btn-primary">Ver mas</a>
             </div>
           </div>
@@ -71,7 +71,7 @@
             <img src="./assets/img/ofertas.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Productos</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti iure eum id rem doloribus quis.</p>
               <a href="#" class="btn btn-primary">Ver mas</a>
             </div>
           </div>
@@ -79,7 +79,7 @@
             <img src="./assets/img/ofertas.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Box</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae velit iure, voluptates beatae eos tempora!</p>
               <a href="#" class="btn btn-primary">Ver mas</a>
             </div>
           </div>
