--- a/index.html
+++ b/index.html
@@ -85,10 +85,14 @@
           </div>
         </section>
     </main>
-    <footer class="col-12 justify-content-center">
-        Derechos reservados &copy; 2022 
-        Diseñado por Joaquin 
-        villarrealjoaquin09@gmail.com 
+    <footer class="container">
+        <div class="row">
+        <div class="col">
+            Derechos reservados &copy; 2022 
+            Diseñado por Joaquin 
+            villarrealjoaquin09@gmail.com 
+        </div>
+     </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
