--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-
 <body class="container-fluid">
     <header class="col-12">
         <nav class="navbar navbar-expand-lg navbar-light bg-light p-3 id="menu">
@@ -35,65 +34,54 @@
             </div>
           </nav>
     </header>
-    <main class="col-12 ">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="3000">
-                <img src="./assets/img/food-bread-baking-pretzel-still-life-hd-wallpaper-preview.jpg" class="d-block w-100" alt="slide1">
-              </div>
-              <div class="carousel-item"  data-bs-interval="3000">
-                <img src="./assets/img/HD-wallpaper-bakery-store-building-bakery-store-shop.jpg" class="d-block w-100" alt="slide2">
-              </div>
-              <div class="carousel-item"  data-bs-interval="3000">
-                <img src="./assets/img/HD-wallpaper-breads-bakery-graphy-food-healthy-bread.jpg" class="d-block w-100" alt="slide3">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-
-          <section class="cards d-flex justify-content-evenly">
-          <div class="card" style="width: 18rem;">
-            <img src="./assets/img/ofertas.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Promos</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illo fugit officia, eveniet eaque corporis?.</p>
-              <a href="#" class="btn btn-primary">Ver mas</a>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem ;">
-            <img src="./assets/img/ofertas.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Productos</h5>
-              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti iure eum id rem doloribus quis.</p>
-              <a href="#" class="btn btn-primary">Ver mas</a>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="./assets/img/ofertas.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Box</h5>
-              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae velit iure, voluptates beatae eos tempora!</p>
-              <a href="#" class="btn btn-primary">Ver mas</a>
-            </div>
-          </div>
-        </section>
-    </main>
-    <footer class="container">
-        <div class="row">
-        <div class="col">
-            Derechos reservados &copy; 2022 
-            Diseñado por Joaquin 
-            villarrealjoaquin09@gmail.com 
+    <main>
+    <div class="row">
+        <div class="banner">
+            <div class="capa"></div>
+                <div class="info">
+                    <h1>Bienvenidos a Panaderia El boulevard</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam amet sapiente exercitationem harum sint reprehenderit beatae ipsa natus quibusdam! Repudiandae.</p>
+                    <a href="#">Leer mas</a>
+                </div>
         </div>
-     </div>
+    </div>
+
+    <section>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="box">
+                    <h3 class="titulo1">recomendacion del dia</h3>
+                   <div><img class="img-fluid"  src="./assets/img/ofertas.jpg" alt=""></div> 
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi incidunt cupiditate amet, quia fugit ipsum.</p>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="box">
+                    <h3 class="titulo1">recomendacion del dia</h3>
+                   <div><img class="img-fluid"  src="./assets/img/ofertas.jpg" alt=""></div> 
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi incidunt cupiditate amet, quia fugit ipsum.</p>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="box">
+                    <h3 class="titulo1">recomendacion del dia</h3>
+                   <div><img class="img-fluid"  src="./assets/img/ofertas.jpg" alt=""></div> 
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi incidunt cupiditate amet, quia fugit ipsum.</p>
+                </div>
+            </div>
+            
+        
+    </section>
+    </main>
+
+    <footer class="col-12 text-center">
+        Derechos reservados &copy; 2022 
+        Diseñado por Joaquin 
+        villarrealjoaquin09@gmail.com 
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
