--- a/productos.html
+++ b/productos.html
@@ -34,37 +34,64 @@
             </div>
           </nav>
     </header>
-    <main class="col-12">
+    <main>
+
       <div class="titulo">
-      <h2>Nuestros Productos</h2>
-       </div>
-       <section class=" row col-12 cards d-flex justify-content-evenly">
+        <h2>Nuestros Productos</h2>
+      </div>
+
+       <div class=" row cards d-flex justify-content-evenly mt-5">
         <div class="card col-md-3" style="width: 18rem;">
-          <img src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Promos</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Ver mas</a>
-          </div>
+          <div><img  class="img-fluid" src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="..."></div>
+            <div class="card-body">
+              <h5 class="card-title">Promos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Ver mas</a>
+            </div>
+        </div> 
+
+        <div class="card col-md-3" style="width: 18rem;">
+          <div><img  class="img-fluid" src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="..."></div>
+            <div class="card-body">
+              <h5 class="card-title">Promos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Ver mas</a>
+            </div>
         </div>
+
         <div class="card col-md-3" style="width: 18rem;">
-          <img src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Promos</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Ver mas</a>
-          </div>
+          <div><img  class="img-fluid" src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="..."></div>
+            <div class="card-body">
+              <h5 class="card-title">Promos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Ver mas</a>
+            </div>
         </div>
+
         <div class="card col-md-3" style="width: 18rem;">
-          <img src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Promos</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Ver mas</a>
-          </div>
+          <div><img  class="img-fluid" src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="..."></div>
+            <div class="card-body">
+              <h5 class="card-title">Promos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Ver mas</a>
+            </div>
         </div>
+      </div>
+
+
+  
+      <div class=" row cards d-flex justify-content-evenly mt-5">
         <div class="card col-md-3" style="width: 18rem;">
-          <img src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="...">
+          <div><img  class="img-fluid" src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="..."></div>
+            <div class="card-body">
+              <h5 class="card-title">Promos</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Ver mas</a>
+           </div>
+        </div> 
+
+        <div class="card col-md-3" style="width: 18rem;">
+          <div><img  class="img-fluid" src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="..."></div>
           <div class="card-body">
             <h5 class="card-title">Promos</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -72,46 +99,31 @@
           </div>
         </div>
 
-        <section class=" row col-12 cards d-flex justify-content-evenly">
-          <div class="card col-md-3" style="width: 18rem;">
-            <img src="./assets/img/facturas.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Promos</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Ver mas</a>
-            </div>
+        <div class="card col-md-3" style="width: 18rem;">
+          <div><img  class="img-fluid" src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="..."></div>
+          <div class="card-body">
+            <h5 class="card-title">Promos</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Ver mas</a>
           </div>
-          <div class="card col-md-3" style="width: 18rem;">
-            <img src="./assets/img/facturas.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Promos</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Ver mas</a>
-            </div>
+        </div>
+
+        <div class="card col-md-3" style="width: 18rem;">
+          <div><img  class="img-fluid" src="./assets/img/Facturas-de-panaderia-copia.jpg" class="card-img-top" alt="..."></div>
+          <div class="card-body">
+            <h5 class="card-title">Promos</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Ver mas</a>
           </div>
-          <div class="card col-md-3" style="width: 18rem;">
-            <img src="./assets/img/facturas.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Promos</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Ver mas</a>
-            </div>
-          </div>
-          <div class="card col-md-3" style="width: 18rem;">
-            <img src="./assets/img/facturas.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Promos</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Ver mas</a>
-            </div>
-          </div>
-  
-    </main>
-    <footer class="col-12 d-flex justify-content-center">
+        </div>
+      </div>
+         
+      <footer class="col-12 text-center">
         Derechos reservados &copy; 2022 
         Diseñado por Joaquin  
         villarrealjoaquin09@gmail.com 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     
 </body>
 </html>
