--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 </div>
         </div>
     </div>
-
+    <div class="row">
+        <h2 class="d-flex justify-content-center mt-3">Nuestras Novedades</h2>
+    </div>
     <section>
         <div class="row">
             <div class="col-md-4">
