--- a/index.html
+++ b/index.html
@@ -51,23 +51,21 @@
     </div>
     <section>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-4">
                 <div class="box">
                     <h3 class="titulo1">recomendacion del dia</h3>
                    <div><img class="img-fluid"  src="./assets/img/ofertas.jpg" alt=""></div> 
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi incidunt cupiditate amet, quia fugit ipsum.</p>
                 </div>
             </div>
-
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-4">
                 <div class="box">
                     <h3 class="titulo1">recomendacion del dia</h3>
                    <div><img class="img-fluid"  src="./assets/img/ofertas.jpg" alt=""></div> 
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi incidunt cupiditate amet, quia fugit ipsum.</p>
                 </div>
             </div>
-
-            <div class="col-md-4">
+            <div class="col-sm-12 col-md-4">
                 <div class="box">
                     <h3 class="titulo1">recomendacion del dia</h3>
                    <div><img class="img-fluid"  src="./assets/img/ofertas.jpg" alt=""></div> 
